adds optional dropdowns to nav

--- a/component-library/shared/styles/global.scss
+++ b/component-library/shared/styles/global.scss
@@ -115,6 +115,14 @@
          format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+   font-family: 'FontAwesome';
+   src: url('../../../fonts/fontawesome-webfont.woff') format('woff'),
+        url('../../../fonts/fontawesome-webfont.ttf') format('truetype');
+   font-weight: normal;
+   font-style: normal;
+ }
+
 // Media quaries with min width
 @mixin media-breakpoint-up-sm {
    @media (min-width: 576px) {
@@ -14689,7 +14697,7 @@ a {
    background-color: none;
    z-index: 1000;
    transition: all 0.3s cubic-bezier(0.36, 0.03, 0, 0.91);
-
+ 
    @include media-breakpoint-down-xxl {
       padding-left: 2.4rem;
       padding-right: 2.4rem;
@@ -14701,13 +14709,13 @@ a {
          padding: 0.75rem 1rem;
       }
    }
-
+ 
    // Navbar button position fixing
    .nav-item {
       list-style: none;
    }
-}
-@include media-breakpoint-down-lg {
+ }
+ @include media-breakpoint-down-lg {
    .navbar {
       margin: $base-margin * 0;
       padding: 1.5rem;
@@ -14716,30 +14724,30 @@ a {
       // width: calc(100% - 32px) !important;
       background: $color-white;
    }
-}
-@include media-breakpoint-down-sm {
+ }
+ @include media-breakpoint-down-sm {
    .navbar {
       padding: 1rem 0;
    }
-}
-
-.navbar-brand {
+ }
+ 
+ .navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
    margin-right: 0;
    font-size: 1.25rem;
    width: 155px;
-}
-
-@include media-breakpoint-down-sm {
+ }
+ 
+ @include media-breakpoint-down-sm {
    .navbar-brand {
       flex: 1;
    }
-}
-
-// Custom navbar navigation (doesn't require `.nav`, but does make use of `.nav-link`).
-
-.navbar-nav {
+ }
+ 
+ // Custom navbar navigation (doesn't require `.nav`, but does make use of `.nav-link`).
+ 
+ .navbar-nav {
    display: flex;
    flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
    padding-left: 0;
@@ -14773,20 +14781,35 @@ a {
          padding-left: 0.75rem !important;
       }
    }
+ 
+   
    .dropdown {
       .dropdown-menu {
-         box-sizing: content-box;
-         background: $color-white;
-         min-width: 188px;
-         transition: all 0.3s ease-in-out;
-         border: 0 solid $color-primary-dark;
-         border-radius: 1.25rem;
-         padding: 10px 30px 20px;
-         right: 1.5rem;
-         left: unset;
-         box-shadow: 0px 40px 60px rgba(189, 189, 189, 0.25);
+         position: absolute;
+         top: calc(100% + 8px);
+         left: -32px;
+         transform: translateZ(0) scale(.9);
+         backface-visibility: hidden;
+         z-index: 100;
+         min-width: 150px;
+         display: block;
+         padding: 20px;
+         opacity: 0;
+         visibility: hidden;
+         transition: all .25s ease;
+         border-radius: 8px;
+         box-shadow: 0 20px 20px #1495a712;
+         background-color: #fff;
+ 
+         li {
+            margin-bottom: 10px;
+ 
+            &:last-child {
+               margin-bottom: 0;
+            }
+         }
       }
-      &-toggle {
+      &-link {
          &:after {
             content: '\f107';
             font-family: FontAwesome;
@@ -14797,10 +14820,12 @@ a {
             border-top: none;
             padding: $base-padding * 0;
             margin-right: 0 !important;
+            margin-left: 5px;
          }
       }
+ 
       li.dropdown-megamenu-column-items {
-         padding: 1.25rem 0rem;
+         padding: 10rem 0rem;
          display: flex;
          &:last-child {
             padding-bottom: 0.5rem;
@@ -14810,17 +14835,20 @@ a {
          }
       }
       &-item {
-         margin-bottom: 0;
+         margin-bottom: 0;  
          color: $color-text-light;
          font-weight: 600;
          text-align: left;
          font-size: $base-font-size * 1.1;
          padding: 0;
          background: none;
+       
          &:hover {
-            color: $color-primary;
+           color: $color-primary;
          }
-      }
+       }
+       
+       
       .nav-arrow {
          position: absolute;
          top: -10px;
@@ -14833,7 +14861,7 @@ a {
          }
       }
    }
-
+ 
    /* Dropdown Menu for large screen */
    @include media-breakpoint-up-lg {
       .dropdown {
@@ -14846,7 +14874,7 @@ a {
             border: 1px solid $color-secondary-light;
             transform-origin: 0 0 0;
          }
-
+ 
          &:hover {
             .dropdown-menu {
                opacity: 1;
@@ -14857,9 +14885,9 @@ a {
          }
       }
    }
-
+ 
    /* Dropdown Menu for Small screen */
-
+ 
    @include media-breakpoint-down-lg {
       .nav-link {
          margin-bottom: 1.9rem;
@@ -14872,7 +14900,7 @@ a {
          font-weight: 600;
          font-family: $font-primary;
       }
-
+ 
       .dropdown {
          width: 100%;
          transition: all 3s ease-in-out;
@@ -14887,7 +14915,8 @@ a {
             transform-origin: 0 0 0;
             right: 0;
             transition: all 0.1s ease-in-out;
-            padding: 40px 0px 5px 60px;
+            border: none;
+            padding: 0 20px;
             box-shadow: 0px 0 0 rgba(189, 189, 189, 0.25);
             margin-bottom: 20px;
             .dropdown-megamenu-column-items {
@@ -14901,16 +14930,17 @@ a {
          .dropdown-menu.show {
             display: block;
             opacity: 1;
+            position: unset;
             visibility: visible;
             transform: scaleY(1);
             transform-origin: 0 0 0;
             height: auto;
             text-align: center;
-            background: $color-secondary-dark;
+          //  background: $color-secondary-dark;
             width: calc(100% + 2rem);
-            margin-left: -3rem;
+           // margin-left: -3rem;
             border-radius: 0;
-            margin-top: -60px;
+          //  margin-top: -60px;
          }
          &-toggle {
             &:after {
@@ -14926,56 +14956,56 @@ a {
          }
       }
    }
-}
-
-//Sticky Navbar
-
-.sticky-nav {
+ }
+ 
+ //Sticky Navbar
+ 
+ .sticky-nav {
    padding: $base-padding $base-padding * 2 !important;
    background: $color-white;
    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
    z-index: 1000;
-}
-
-@include media-breakpoint-down-lg {
+ }
+ 
+ @include media-breakpoint-down-lg {
    .sticky-nav {
       padding: $base-padding * 1.5 !important;
    }
-}
-@include media-breakpoint-down-sm {
+ }
+ @include media-breakpoint-down-sm {
    .sticky-nav {
       padding: $base-padding * 1 $base-padding * 0 !important;
    }
-}
-/**
+ }
+ /**
  * Note: I have omitted any vendor-prefixes for clarity.
  * Adding them is left as an exercise for the reader.
  */
-
-// Button for toggling the navbar when in its collapsed state
-.navbar-toggler {
+ 
+ // Button for toggling the navbar when in its collapsed state
+ .navbar-toggler {
    background-color: transparent; // remove default button style
    border: none; // remove default button style
    &:focus {
       box-shadow: none;
    }
-}
-
-.navbar-toggler[aria-expanded='true'] .navbar-toggler-default {
+ }
+ 
+ .navbar-toggler[aria-expanded='true'] .navbar-toggler-default {
    display: none;
-}
-.navbar-toggler .navbar-toggler-default {
+ }
+ .navbar-toggler .navbar-toggler-default {
    display: -ms-flexbox;
    display: flex;
-}
-.navbar-toggler[aria-expanded='true'] .navbar-toggler-toggled {
+ }
+ .navbar-toggler[aria-expanded='true'] .navbar-toggler-toggled {
    display: -ms-flexbox;
    display: flex;
-}
-.navbar-toggler .navbar-toggler-toggled {
+ }
+ .navbar-toggler .navbar-toggler-toggled {
    display: none;
-}
-.navbar-toggler[aria-expanded='true'] .navbar-toggler-toggled {
+ }
+ .navbar-toggler[aria-expanded='true'] .navbar-toggler-toggled {
    display: flex;
    position: absolute;
    bottom: 0;
@@ -14999,7 +15029,7 @@ a {
          stroke: $color-white;
       }
    }
-}
+ }
 /********** 
 15. Footer Section Styles
 **********/
