--- a/site/css/theme.css
+++ b/site/css/theme.css
@@ -72,6 +72,12 @@
   src: url("./../fonts/space-grotesk-v12-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""), url("./../fonts/space-grotesk-v12-latin-700.eot?#iefix") format("embedded-opentype"), url("./../fonts/space-grotesk-v12-latin-700.woff2") format("woff2"), url("./../fonts/space-grotesk-v12-latin-700.woff") format("woff"), url("./../fonts/space-grotesk-v12-latin-700.ttf") format("truetype"), url("./../fonts/space-grotesk-v12-latin-700.svg#SpaceGrotesk") format("svg"); /* Legacy iOS */
 }
+@font-face {
+  font-family: "FontAwesome";
+  src: url("../../../fonts/fontawesome-webfont.woff") format("woff"), url("../../../fonts/fontawesome-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 /********** 
  1. Default  Styles 
 **********/
@@ -844,41 +850,41 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 
 @media (min-width: 576px) {
   .container-sm,
-.container {
+  .container {
     max-width: 540px;
   }
 }
 @media (min-width: 768px) {
   .container-md,
-.container-sm,
-.container {
+  .container-sm,
+  .container {
     max-width: 720px;
   }
 }
 @media (min-width: 992px) {
   .container-lg,
-.container-md,
-.container-sm,
-.container {
+  .container-md,
+  .container-sm,
+  .container {
     max-width: 960px;
   }
 }
 @media (min-width: 1200px) {
   .container-xl,
-.container-lg,
-.container-md,
-.container-sm,
-.container {
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
     max-width: 1140px;
   }
 }
 @media (min-width: 1400px) {
   .container-xxl,
-.container-xl,
-.container-lg,
-.container-md,
-.container-sm,
-.container {
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
     max-width: 1320px;
   }
 }
@@ -12049,18 +12055,29 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   }
 }
 .navbar-nav .dropdown .dropdown-menu {
-  box-sizing: content-box;
-  background: #fff;
-  min-width: 188px;
-  transition: all 0.3s ease-in-out;
-  border: 0 solid #fce7e5;
-  border-radius: 1.25rem;
-  padding: 10px 30px 20px;
-  right: 1.5rem;
-  left: unset;
-  box-shadow: 0px 40px 60px rgba(189, 189, 189, 0.25);
+  position: absolute;
+  top: calc(100% + 8px);
+  left: -32px;
+  transform: translateZ(0) scale(0.9);
+  backface-visibility: hidden;
+  z-index: 100;
+  min-width: 150px;
+  display: block;
+  padding: 20px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.25s ease;
+  border-radius: 8px;
+  box-shadow: 0 20px 20px rgba(20, 149, 167, 0.0705882353);
+  background-color: #fff;
 }
-.navbar-nav .dropdown-toggle:after {
+.navbar-nav .dropdown .dropdown-menu li {
+  margin-bottom: 10px;
+}
+.navbar-nav .dropdown .dropdown-menu li:last-child {
+  margin-bottom: 0;
+}
+.navbar-nav .dropdown-link:after {
   content: "\f107";
   font-family: FontAwesome;
   font-size: 1.4rem;
@@ -12070,9 +12087,10 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   border-top: none;
   padding: 0rem;
   margin-right: 0 !important;
+  margin-left: 5px;
 }
 .navbar-nav .dropdown li.dropdown-megamenu-column-items {
-  padding: 1.25rem 0rem;
+  padding: 10rem 0rem;
   display: flex;
 }
 .navbar-nav .dropdown li.dropdown-megamenu-column-items:last-child {
@@ -12148,7 +12166,8 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
     transform-origin: 0 0 0;
     right: 0;
     transition: all 0.1s ease-in-out;
-    padding: 40px 0px 5px 60px;
+    border: none;
+    padding: 0 20px;
     box-shadow: 0px 0 0 rgba(189, 189, 189, 0.25);
     margin-bottom: 20px;
   }
@@ -12162,16 +12181,14 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   .navbar-nav .dropdown .dropdown-menu.show {
     display: block;
     opacity: 1;
+    position: unset;
     visibility: visible;
     transform: scaleY(1);
     transform-origin: 0 0 0;
     height: auto;
     text-align: center;
-    background: #f7f8fa;
     width: calc(100% + 2rem);
-    margin-left: -3rem;
     border-radius: 0;
-    margin-top: -60px;
   }
   .navbar-nav .dropdown-toggle:after {
     font-size: 1rem;
@@ -12203,9 +12220,9 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   }
 }
 /**
- * Note: I have omitted any vendor-prefixes for clarity.
- * Adding them is left as an exercise for the reader.
- */
+* Note: I have omitted any vendor-prefixes for clarity.
+* Adding them is left as an exercise for the reader.
+*/
 .navbar-toggler {
   background-color: transparent;
   border: none;
@@ -13322,7 +13339,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   box-shadow: 0px 0px 80px rgba(150, 0, 0, 0.06);
   border-radius: 20px;
   z-index: 1;
-  margin-top: -28.2rem;
+  margin-top: 1rem;
   padding: 4.2rem 3.3rem 3.1rem;
   background: #fff;
 }
@@ -13392,6 +13409,10 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
   -webkit-mask-size: contain;
   width: 115%;
   height: 100%;
+}
+
+.contact-hero + .contact .contact-form > form {
+  margin-top: -28.2rem;
 }
 
 .contact-hero {
@@ -13608,13 +13629,13 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 1399.98px) {
   .counter-up-wrapper .counter,
-.counter-up-wrapper .percent {
+  .counter-up-wrapper .percent {
     font-size: 3rem;
   }
 }
 @media (max-width: 575.98px) {
   .counter-up-wrapper .counter,
-.counter-up-wrapper .percent {
+  .counter-up-wrapper .percent {
     font-size: 2.5rem;
   }
 }
@@ -13739,7 +13760,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 991.98px) {
   .feature-item-banner .card-image img,
-.feature-two-item-banner .card-image img {
+  .feature-two-item-banner .card-image img {
     width: 100%;
   }
 }
@@ -13766,7 +13787,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 991.98px) {
   .feature-item-banner .effect-one,
-.feature-two-item-banner .effect-one {
+  .feature-two-item-banner .effect-one {
     left: -4%;
     width: 102%;
     height: 117%;
@@ -13784,14 +13805,14 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 1399.98px) {
   .feature-item-banner .effect-two,
-.feature-two-item-banner .effect-two {
+  .feature-two-item-banner .effect-two {
     right: -9%;
     width: 105%;
   }
 }
 @media (max-width: 575.98px) {
   .feature-item-banner .effect-two,
-.feature-two-item-banner .effect-two {
+  .feature-two-item-banner .effect-two {
     top: -8%;
   }
 }
@@ -13803,7 +13824,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 1199.98px) {
   .feature-item-content h2,
-.feature-two-item-content h2 {
+  .feature-two-item-content h2 {
     font-size: 2rem;
     padding-right: 0rem;
     margin-bottom: 1.5rem;
@@ -13811,7 +13832,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 575.98px) {
   .feature-item-content h2,
-.feature-two-item-content h2 {
+  .feature-two-item-content h2 {
     font-size: 1.9rem;
     margin-bottom: 1.25rem;
   }
@@ -13826,7 +13847,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 575.98px) {
   .feature-item-content p,
-.feature-two-item-content p {
+  .feature-two-item-content p {
     font-size: 1.1rem;
     line-height: 29.7px;
   }
@@ -13847,7 +13868,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 575.98px) {
   .feature-item-content ul li,
-.feature-two-item-content ul li {
+  .feature-two-item-content ul li {
     font-size: 1.1rem;
     margin-bottom: 1rem;
   }
@@ -13864,13 +13885,13 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 1399.98px) {
   .feature .section-header,
-.feature-two .section-header {
+  .feature-two .section-header {
     padding-bottom: 7rem;
   }
 }
 @media (max-width: 575.98px) {
   .feature .section-header,
-.feature-two .section-header {
+  .feature-two .section-header {
     padding: 3.2rem 0 3.5rem;
   }
 }
@@ -13881,7 +13902,7 @@ btn-check:focus + .btn-secondary svg path, .btn-secondary:focus svg path, .btn-s
 }
 @media (max-width: 1199.98px) {
   .feature .section-header p,
-.feature-two .section-header p {
+  .feature-two .section-header p {
     width: 90%;
   }
 }
